Work in progress organizationMembership

--- a/IoT.SmartZone.Service/IoT.SmartZone.Service.Application/IoT.SmartZone.Service.Application.csproj
+++ b/IoT.SmartZone.Service/IoT.SmartZone.Service.Application/IoT.SmartZone.Service.Application.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\IoT.SmartZone.Service.Domain\IoT.SmartZone.Service.Domain.csproj" />
     <ProjectReference Include="..\IoT.SmartZone.Service.Infrastructure\IoT.SmartZone.Service.Infrastructure.csproj" />
   </ItemGroup>
 
