--- a/IoT.SmartZone.Service/IoT.SmartZone.Service.Bootsrapper/IoT.SmartZone.Service.Bootsrapper.csproj
+++ b/IoT.SmartZone.Service/IoT.SmartZone.Service.Bootsrapper/IoT.SmartZone.Service.Bootsrapper.csproj
@@ -7,7 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\IoT.SmartZone.Service.Shared.Abstractions\IoT.SmartZone.Service.Shared.Abstractions.csproj" />
+    <ProjectReference Include="..\IoT.SmartZone.Service.Shared.Infrastucture\IoT.SmartZone.Service.Shared.Infrastucture.csproj" />
   </ItemGroup>
 
 </Project>
