added docker, added auth (sign in, sign up), added registering data providers

--- a/IoT.SmartZone.Service/IoT.SmartZone.Service.Bootsrapper/IoT.SmartZone.Service.Bootsrapper.csproj
+++ b/IoT.SmartZone.Service/IoT.SmartZone.Service.Bootsrapper/IoT.SmartZone.Service.Bootsrapper.csproj
@@ -4,9 +4,17 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>49794cb9-b8af-4450-9a42-7d403e62ab3c</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.6">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.20.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
 	  <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.1" />
 
