--- a/IoT.SmartZone.Service/IoT.SmartZone.Service.Bootsrapper/appsettings.json
+++ b/IoT.SmartZone.Service/IoT.SmartZone.Service.Bootsrapper/appsettings.json
@@ -36,10 +36,10 @@
     ]
   },
   "logger": {
-    "level": "information",
+    "level": "Trace",
     "overrides": {
-      "Microsoft.EntityFrameworkCore.Database.Command": "Warning",
-      "Microsoft.EntityFrameworkCore.Infrastructure": "Warning"
+      "Microsoft.EntityFrameworkCore.Database.Command": "Information",
+      "Microsoft.EntityFrameworkCore.Infrastructure": "Information"
     },
     "excludePaths": [
       "/",
@@ -83,7 +83,7 @@
     "interval": "00:00:01"
   },
   "postgres": {
-    "connectionString": "Server=(localdb)\\MSSQLLocalDB;Database=SmartZoneDB;Integrated Security=true; Trusted_Connection=true;"
+    "connectionString": "Host=localhost; Port=5432; USER ID=postgres; Database=postgres; Password=qwe123;"
   },
   "security": {
     "encryption": {
