--- a/IoT.SmartZone.Service/IoT.SmartZone.Service.Modules.Users.Api/IoT.SmartZone.Service.Modules.Users.Api.csproj
+++ b/IoT.SmartZone.Service/IoT.SmartZone.Service.Modules.Users.Api/IoT.SmartZone.Service.Modules.Users.Api.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.6">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\IoT.SmartZone.Service.Modules.Users.Core\IoT.SmartZone.Service.Modules.Users.Core.csproj" />
     <ProjectReference Include="..\IoT.SmartZone.Service.Shared.Abstractions\IoT.SmartZone.Service.Shared.Abstractions.csproj" />
     <ProjectReference Include="..\IoT.SmartZone.Service.Shared.Infrastucture\IoT.SmartZone.Service.Shared.Infrastucture.csproj" />
