--- a/IoT.SmartZone.Service/IoT.SmartZone.Service.Modules.Users.Infrastructure/IoT.SmartZone.Service.Modules.Users.Infrastructure.csproj
+++ b/IoT.SmartZone.Service/IoT.SmartZone.Service.Modules.Users.Infrastructure/IoT.SmartZone.Service.Modules.Users.Infrastructure.csproj
@@ -7,13 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentValidation" Version="11.9.2" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.DynamicLinq" Version="8.4.1" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.6">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\IoT.SmartZone.Service.Modules.Users.Infrastructure\IoT.SmartZone.Service.Modules.Users.Infrastructure.csproj" />
     <ProjectReference Include="..\IoT.SmartZone.Service.Shared.Abstractions\IoT.SmartZone.Service.Shared.Abstractions.csproj" />
     <ProjectReference Include="..\IoT.SmartZone.Service.Shared.Infrastucture\IoT.SmartZone.Service.Shared.Infrastucture.csproj" />
   </ItemGroup>
