--- a/IoT.SmartZone.Service/IoT.SmartZone.Service.Shared.Infrastucture/IoT.SmartZone.Service.Shared.Infrastucture.csproj
+++ b/IoT.SmartZone.Service/IoT.SmartZone.Service.Shared.Infrastucture/IoT.SmartZone.Service.Shared.Infrastucture.csproj
@@ -11,9 +11,9 @@
     <PackageReference Include="MessagePack" Version="2.5.140" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.6" />
-	<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.6" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="8.0.6" />
 	<PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="8.0.6" />
+	<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
     <PackageReference Include="Scrutor" Version="4.2.2" />
     <PackageReference Include="Serilog" Version="4.0.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
